--- a/task0003/css/index.css
+++ b/task0003/css/index.css
@@ -147,8 +147,13 @@ a {
 	width: 820px;
 	height: 540px;
 }
+.right input {
+	border: 0;
+	outline: none;
+}
 .title {
 	padding-left: 30px;
+	display: block;
 	width: 790px;
 	height: 50px;
 	line-height: 50px;
@@ -156,8 +161,9 @@ a {
 	font-weight: 700;
 	background-color: deeppink;
 }
-.date {
+.data {
 	padding-left: 30px;
+	display: block;
 	width: 790px;
 	height: 50px;
 	line-height: 50px;
@@ -166,7 +172,9 @@ a {
 .edit {
 	padding-top: 30px;
 	padding-left: 30px;
+	display: block;
 	width: 790px;
 	height: 410px;
 	background-color: red;
+	border: 0;
 }
